Fixed nav bar positioning, though I need to add positioning on smaller screen sizes

--- a/styles.css
+++ b/styles.css
@@ -14,17 +14,24 @@ header > img {
     height: auto;
 }
 
+
 header {
     background-color: white;
     display: flex;
-    justify-content: space-between;
     align-items: center;
     height: 20%;
     width: 100%;
 }
 
+#spacer {
+    margin: 0;
+    width: 0%;
+    height: 0%;
+}
+
 header > h1 {
-    margin-left: 10px;
+    margin: auto auto;
+    margin-right: 25%;
 }
 
 #nav-bar > ul{
@@ -33,6 +40,10 @@ header > h1 {
     align-items: center;
     margin-right: 10px;
 
+}
+
+#nav-bar > ul > li {
+    list-style: none;
 }
 
 #nav-bar > ul > li > a {
